# boids

./: .pre-commit-config.yaml  CMakeLists.txt  boid_desktop_bg.sh  boid_desktop_bg.sh.desktop  boids.cpp  conanfile.py  config.json
